fix #35 upload photo for missing station
